--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
             </div>
           </li>
 
-          <li class="features-list__item features-more-item">
+          <li class="features-list__item features-list__item_size_m">
             <h3 class="features-list__title">Жилье</h3>
             <p class="features-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
 
-          <li class="features-list__item features-more-item">
+          <li class="features-list__item features-list__item_size_m">
             <h3 class="features-list__title">Еда</h3>
             <p class="features-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
-          <li class="features-list__item features-more-item">
+          <li class="features-list__item features-list__item_size_m">
             <h3 class="features-list__title">Сувениры</h3>
             <p class="features-list__text">Не только китайского, но и местного производства!</p>
           </li>
 
           <li class="features-list__item features-list__item_blue">
-            <div class="column">
+            <div class="features-list__column">
               <h3 class="features-list__title features-list__text_white">
                 Там есть мост дьявола
               </h3>
@@ -86,7 +86,7 @@
                 Да, по нему можно пройти! Если конечно вы осмелитесь
               </p>
             </div>
-            <div class="column image">
+            <div class="features-list__column features-list__column_image">
               <img src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
             </div>
           </li>
