--- a/index.html
+++ b/index.html
@@ -119,27 +119,23 @@
           <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
         </div>
 
-        <form class="active modal modal-form" action="#" method="post">
-          <fieldset>
-            <legend class="visually-hidden">
-              Форма поиска гостиниц
-            </legend>
-
-            <fieldset>
+        <form class="active modal modal-form inner" action="#" method="post">
+          <fieldset class="modal-form__fieldset">
+            <legend class="visually-hidden">Форма поиска гостиниц</legend>
+            <fieldset class="modal-form__fieldset">
               <legend class="visually-hidden">Время прибывания</legend>
-              <div class="modal-form__time-stay" >
+              <div class="modal-form__column" >
                 <label class="modal-form__text" for="arrival-data">
-                  Дата заезда:
+                    Дата заезда:
                 </label>
-                <div class="column-input-icon">
+                <div class="column__input-icon">
                   <input class="modal-form__field" type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
                   <a class="modal-form__calendar-button" href="#" >
                     <img src="img/calendar.svg" width="21" height="20" alt="Календарь">
                   </a>
                 </div>
-              </div>
-
-              <div>
+                </div>
+              <div class="modal-form__column">
                 <label class="modal-form__text" for="departure-date">Дата выезда:</label>
                 <div class="column-input-icon">
                   <input class="modal-form__field" type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
@@ -150,23 +146,24 @@
               </div>
             </fieldset>
 
-            <fieldset>
-            <legend class="visually-hidden">Колличество гостей</legend>
-              <div>
-                <label class="modal-form__text" for="adult">Взрослые:</label>
-                <div>
-                  <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
-                  <input class="modal-form__field" type="text" name="adult" placeholder="2" id="adult">
-                  <button class="button modal-form__reduce-button"  type="button" name="reduce-button"></button>
+            <fieldset class="modal-form__fieldset">
+              <legend class="visually-hidden">Колличество гостей</legend>
+              <div class="modal-form__column ">
+                <div class="modal-form__column">
+                  <label class="modal-form__text" for="adult">Взрослые:</label>
+                  <div>
+                    <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
+                    <input class="modal-form__field" type="text" name="adult" placeholder="2" id="adult">
+                    <button class="button modal-form__reduce-button"  type="button" name="reduce-button"></button>
+                  </div>
                 </div>
-              </div>
-
-              <div>
-                <label class="modal-form__text" for="children">Дети:</label>
-                <div>
-                  <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
-                  <input class="modal-form__field" type="text" name="adult" placeholder="0" id="children">
-                  <button class="button modal-form__reduce-button" type="button" name="reduce-button"></button>
+                <div class="modal-form__column">
+                  <label class="modal-form__text" for="children">Дети:</label>
+                  <div>
+                    <button class="button modal-form__increase-button" type="button" name="increase-button"></button>
+                    <input class="modal-form__field" type="text" name="adult" placeholder="0" id="children">
+                    <button class="button modal-form__reduce-button" type="button" name="reduce-button"></button>
+                  </div>
                 </div>
               </div>
             </fieldset>
