Начинаю делать футер абсолютным позиционированием

--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
       </section>
     </main>
 
-    <section class="main-map">
+    <section class="main-map inner">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
     </section>
-    <footer class="main-footer">
-      <div class="column">
+    <footer class="main-footer inner">
+      <div class="main-footer__column">
         <p class="main-footer__hashtag">#visitsedona</p>
       </div>
-      <div class="column">
+      <div class="main-footer__column">
         <ul class="main-footer__social-list">
           <li>
             <a class="button social-button social-twitter" href="#">
@@ -202,7 +202,7 @@
           </li>
         </ul>
       </div>
-      <div class="column">
+      <div class="main-footer__column">
         <p class="main-footer__copyright">
           <span class="main-footer__copyright-text" >Website by</span>
           <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
