Начинаю писать вторую страницу

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <main class="container inner">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
-      <p class="container__image">
+      <p class="container__image inner">
         <img src="img/image-slogan.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
       </p>
-      <section class="features">
+      <section class="features inner">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <div class="features__column inner">
           <p class="features__slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
@@ -174,42 +174,43 @@
         </form>
       </section>
     </main>
-
-    <section class="main-map inner">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
-    </section>
-    <footer class="main-footer inner">
-      <div class="main-footer__column">
-        <p class="main-footer__hashtag">#visitsedona</p>
-      </div>
-      <div class="main-footer__column">
-        <ul class="main-footer__social-list">
-          <li>
-            <a class="button social-button social-twitter" href="#">
-              <span class="visually-hidden">Twitter</span>
+    <div class="position-footer-column inner">
+      <section class="main-map inner">
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
+      </section>
+      <footer class="main-footer main-footer_position inner">
+        <div class="main-footer__column">
+          <p class="main-footer__hashtag">#visitsedona</p>
+        </div>
+        <div class="main-footer__column">
+          <ul class="main-footer__social-list">
+            <li>
+              <a class="button social-button social-twitter" href="#">
+                <span class="visually-hidden">Twitter</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-facebook" href="#">
+                <span class="visually-hidden">Facebook</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-youtube" href="#">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-footer__column">
+          <p class="main-footer__copyright">
+            <span class="main-footer__copyright-text" >Website by</span>
+            <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img class="main-footer__copyright-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
             </a>
-          </li>
-          <li>
-            <a class="button social-button social-facebook" href="#">
-              <span class="visually-hidden">Facebook</span>
-            </a>
-          </li>
-          <li>
-            <a class="button social-button social-youtube" href="#">
-              <span class="visually-hidden">Youtube</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__column">
-        <p class="main-footer__copyright">
-          <span class="main-footer__copyright-text" >Website by</span>
-          <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img class="main-footer__copyright-logo" src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-          </a>
-        </p>
-      </div>
-    </footer>
+          </p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
