--- a/catalog.html
+++ b/catalog.html
@@ -31,217 +31,229 @@
     </header>
 
       <main class="container container_text-alignment">
-        <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
+        <div class="inner">
+          <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
-        <section class="search-hotels">
-          <form class="search-hotels__form" action="#" method="get">
-            <fieldset>
-              <legend><h2 class="visually-hidden">Форма поиска</h2></legend>
-              <fieldset>
-                <legend class="search-hotels__form-title">
-                  Инфраструктура:
-                </legend>
-                <p>
-                  <input type="checkbox" name="pool" id="pool" checked>
-                  <label class="search-hotels__form-text" for="pool">
-                    Бассейн
-                  </label>
-                </p>
+          <section class="search-hotels">
+            <form class="search-hotels__form" action="#" method="get">
+              <fieldset class="search-hotels__fieldset">
+                <legend><h2 class="visually-hidden">Форма поиска</h2></legend>
+                <div class="search-hotels__columns">
+                  <div class="search-hotels__column">
+                    <fieldset class="search-hotels__fieldset">
+                      <legend class="search-hotels__form-title">
+                        Инфраструктура:
+                      </legend>
+                      <p>
+                        <input type="checkbox" name="pool" id="pool" checked>
+                        <label class="search-hotels__form-text" for="pool">
+                          Бассейн
+                        </label>
+                      </p>
 
-                <p>
-                  <input type="checkbox" name="parking" id="parking">
-                  <label class="search-hotels__form-text" for="parking">
-                    Парковка
-                  </label>
-                </p>
+                      <p>
+                        <input type="checkbox" name="parking" id="parking">
+                        <label class="search-hotels__form-text" for="parking">
+                          Парковка
+                        </label>
+                      </p>
 
-                <p>
-                  <input type="checkbox" name="wi-fi" id="wi-fi">
-                  <label class="search-hotels__form-text" for="wi-fi">
-                    Wi-fi
-                  </label>
-                </p>
-              </fieldset>
-              <fieldset>
-                <legend class="search-hotels__form-title">Тип жилья:</legend>
-                <p>
-                  <input type="checkbox" name="hotel" id="hotel" checked>
-                  <label class="search-hotels__form-text" for="hotel">
-                    Гостиница
-                  </label>
-                </p>
+                      <p>
+                        <input type="checkbox" name="wi-fi" id="wi-fi">
+                        <label class="search-hotels__form-text" for="wi-fi">
+                          Wi-fi
+                        </label>
+                      </p>
+                    </fieldset>
+                  </div>
 
-                <p>
-                  <input type="checkbox" name="motel" id="motel" checked>
-                  <label class="search-hotels__form-text" for="motel">
-                    Мотель
-                  </label>
-                </p>
+                  <div class="search-hotels__column">
+                    <fieldset class="search-hotels__fieldset">
+                      <legend class="search-hotels__form-title">Тип жилья:</legend>
+                      <p>
+                        <input type="checkbox" name="hotel" id="hotel" checked>
+                        <label class="search-hotels__form-text" for="hotel">
+                          Гостиница
+                        </label>
+                      </p>
 
-                <p>
-                  <input type="checkbox" name="apartments" id="apartments" checked>
-                  <label class="search-hotels__form-text" for="apartments">
-                    Апартаменты
-                  </label>
-                </p>
-              </fieldset>
-              <fieldset>
-                <legend class="search-hotels__form-title">
-                  Стоимость в сутки (р):
-                </legend>
-                <p>
-                  <label class="search-hotels__form-text" for="from">От</label>
-                  <input class="search-hotels__form-field" type="text" value="0" id="from">
-                </p>
+                      <p>
+                        <input type="checkbox" name="motel" id="motel" checked>
+                        <label class="search-hotels__form-text" for="motel">
+                          Мотель
+                        </label>
+                      </p>
 
-                <p>
-                  <label class="search-hotels__form-text" for="prior">
-                    До
-                  </label>
-                  <input class="search-hotels__form-field" type="text" value="3000" id="prior">
-                </p>
-                <div class="column-controls-button">
-                  <button class="button-control-min-price" type="button" name="button-control-min-price">
-                      <span class="visually-hidden">Переключатель минимальной цены</span>
-                  </button>
+                      <p>
+                        <input type="checkbox" name="apartments" id="apartments" checked>
+                        <label class="search-hotels__form-text" for="apartments">
+                          Апартаменты
+                        </label>
+                      </p>
+                    </fieldset>
+                  </div>
 
-                  <button class="button-control-max-price" type="button" name="button-control-max-price">
-                    <span class="visually-hidden">Переключатель максимальной цены</span>
-                  </button>
+                  <div class="search-hotels__column search-hotels__column_right">
+                    <fieldset class="search-hotels__fieldset">
+                      <legend class="search-hotels__form-title">
+                        Стоимость в сутки (р):
+                      </legend>
+                      <p>
+                        <label class="search-hotels__form-text" for="from">От</label>
+                        <input class="search-hotels__form-field" type="text" value="0" id="from">
+                      </p>
+
+                      <p>
+                        <label class="search-hotels__form-text" for="prior">
+                          До
+                        </label>
+                        <input class="search-hotels__form-field" type="text" value="3000" id="prior">
+                      </p>
+                      <div class="column-controls-button">
+                        <button class="button-control-min-price" type="button" name="button-control-min-price">
+                            <span class="visually-hidden">Переключатель минимальной цены</span>
+                        </button>
+
+                        <button class="button-control-max-price" type="button" name="button-control-max-price">
+                          <span class="visually-hidden">Переключатель максимальной цены</span>
+                        </button>
+                      </div>
+                      <button class="search-hotels-form-button button" type="submit">Показать</button>
+                    </fieldset>
+                  </div>
                 </div>
               </fieldset>
-              <button class="search-hotels-form-button button" type="submit">Показать</button>
-            </fieldset>
-          </form>
-        </section>
-        <section class="found-hotels">
-          <h2 class="visually-hidden">Результаты поиска</h2>
-          <p class="found-hotels__results-text">Найдено: 3</p>
-          <form class="found-hotels__sorting" action="#" method="get">
-            <fieldset>
-                <legend class="found-hotels__title">Сортировка:</legend>
-                <fieldset class="found-hotels__sorting-type">
-                  <legend class="visually-hidden">По типам</legend>
-                  <p>
-                    <input class="found-hotels__field" type="radio" name="sorting-type" value="price" id="sorting-price" checked>
-                    <label class="found-hotels__text" for="sorting-price">
-                      По цене
-                    </label>
-                  </p>
-
-                  <p>
-                      <input class="found-hotels__field" type="radio" name="sorting-type" value="type" id="sorting-type">
-                      <label class="found-hotels__text"  for="sorting-type">
-                        По типу
+            </form>
+          </section>
+          <section class="found-hotels">
+            <h2 class="visually-hidden">Результаты поиска</h2>
+            <p class="found-hotels__results-text">Найдено: 3</p>
+            <form class="found-hotels__sorting" action="#" method="get">
+              <fieldset>
+                  <legend class="found-hotels__title">Сортировка:</legend>
+                  <fieldset class="found-hotels__sorting-type">
+                    <legend class="visually-hidden">По типам</legend>
+                    <p>
+                      <input class="found-hotels__field" type="radio" name="sorting-type" value="price" id="sorting-price" checked>
+                      <label class="found-hotels__text" for="sorting-price">
+                        По цене
                       </label>
-                  </p>
+                    </p>
 
-                  <p>
-                      <input class="found-hotels__field" type="radio" name="sorting-type" value="rating" id="sorting-rating">
-                      <label class="found-hotels__text" for="sorting-rating">По рейтингу</label>
-                  </p>
-                </fieldset>
+                    <p>
+                        <input class="found-hotels__field" type="radio" name="sorting-type" value="type" id="sorting-type">
+                        <label class="found-hotels__text"  for="sorting-type">
+                          По типу
+                        </label>
+                    </p>
 
-                <fieldset class="sorting-descending-increase">
-                  <legend class="visually-hidden">
-                    По увеличению и уменьшению
-                  </legend>
-                  <p>
-                    <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
-                    <label class="visually-hidden" for="sorting-increase">
-                      По увеличению
-                    </label>
-                  </p>
-                  <p>
-                    <input type="radio" name="sorting-descending-increase"
-                    value="descending" id="sorting-descending" checked>
-                    <label class="visually-hidden" for="sorting-descending">
-                      По уменьшению
-                    </label>
-                  </p>
-                </fieldset>
-            </fieldset>
-          </form>
+                    <p>
+                        <input class="found-hotels__field" type="radio" name="sorting-type" value="rating" id="sorting-rating">
+                        <label class="found-hotels__text" for="sorting-rating">По рейтингу</label>
+                    </p>
+                  </fieldset>
 
-          <ul class="found-hotels-list">
-            <li class="found-hotels-list__item">
-              <p class="image-hotel">
-                <img src="img/amara-resor-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
-              </p>
-              <div class="column-info-reserve">
-                <a class="found-hotels-list__hotel-link" href="#">
-                  Amara Resort & Spa
-                </a>
-                <div class="found-hotels-list__desc">
-                  <p class="found-hotels-list__text">Гостиница</p>
-                  <p class="found-hotels-list__text">От 4000 р.</p>
-                </div>
-                <p class="column-reserve">
-                  <a class="button found-hotels-list__details-button" href="#">
-                    Подробнее
-                  </a>
-                  <a class="button found-hotels-list__reserve-button" href="#">
-                    Забронировать
-                  </a>
+                  <fieldset class="sorting-descending-increase">
+                    <legend class="visually-hidden">
+                      По увеличению и уменьшению
+                    </legend>
+                    <p>
+                      <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
+                      <label class="visually-hidden" for="sorting-increase">
+                        По увеличению
+                      </label>
+                    </p>
+                    <p>
+                      <input type="radio" name="sorting-descending-increase"
+                      value="descending" id="sorting-descending" checked>
+                      <label class="visually-hidden" for="sorting-descending">
+                        По уменьшению
+                      </label>
+                    </p>
+                  </fieldset>
+              </fieldset>
+            </form>
+
+            <ul class="found-hotels-list">
+              <li class="found-hotels-list__item">
+                <p class="image-hotel">
+                  <img src="img/amara-resor-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
                 </p>
-              </div>
-              <p class="found-hotels-list__rating">Рейтинг: 8,5</p>
-            </li>
-            <li class="found-hotels-list__item">
-              <p class="image-hotel">
-                <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
-              </p>
-              <div class="column-info-reserve">
-                <a class="found-hotels-list__hotel-link" href="#">
-                  Desert Quail Inn
-                </a>
-                <div class="desc">
-                  <p class="found-hotels-list__text">Гостиница</p>
-                  <p class="found-hotels-list__text">От 4000 р.</p>
+                <div class="column-info-reserve">
+                  <a class="found-hotels-list__hotel-link" href="#">
+                    Amara Resort & Spa
+                  </a>
+                  <div class="found-hotels-list__desc">
+                    <p class="found-hotels-list__text">Гостиница</p>
+                    <p class="found-hotels-list__text">От 4000 р.</p>
+                  </div>
+                  <p class="column-reserve">
+                    <a class="button found-hotels-list__details-button" href="#">
+                      Подробнее
+                    </a>
+                    <a class="button found-hotels-list__reserve-button" href="#">
+                      Забронировать
+                    </a>
+                  </p>
                 </div>
-                <p class="column-reserve">
-                  <a class="button found-hotels-list__details-button" href="#">
-                    Подробнее
-                  </a>
-                  <a class="button found-hotels-list__reserve-button" href="#">
-                    Забронировать
-                  </a>
+                <p class="found-hotels-list__rating">Рейтинг: 8,5</p>
+              </li>
+              <li class="found-hotels-list__item">
+                <p class="image-hotel">
+                  <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
                 </p>
-              </div>
-              <p class="found-hotels-list__rating">Рейтинг: 8,9</p>
-            </li>
-            <li class="found-hotels-list__item">
-              <p class="image-hotel">
-                <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
-              </p>
-              <div class="column-info-reserve">
-                <a class="found-hotels-list__hotel-link" href="#">
-                  Villas at Poco Diablo
-                </a>
-                <div class="desc">
-                  <p class="found-hotels-list__text">Апартаменты</p>
-                  <p class="found-hotels-list__text">От 2000 р.</p>
+                <div class="column-info-reserve">
+                  <a class="found-hotels-list__hotel-link" href="#">
+                    Desert Quail Inn
+                  </a>
+                  <div class="desc">
+                    <p class="found-hotels-list__text">Гостиница</p>
+                    <p class="found-hotels-list__text">От 4000 р.</p>
+                  </div>
+                  <p class="column-reserve">
+                    <a class="button found-hotels-list__details-button" href="#">
+                      Подробнее
+                    </a>
+                    <a class="button found-hotels-list__reserve-button" href="#">
+                      Забронировать
+                    </a>
+                  </p>
                 </div>
-                <p class="column-reserve">
-                  <a class="button found-hotels-list__details-button" href="#">
-                    Подробнее
-                  </a>
-                  <a class="button found-hotels-list__reserve-button" href="#">
-                    Забронировать
-                  </a>
+                <p class="found-hotels-list__rating">Рейтинг: 8,9</p>
+              </li>
+              <li class="found-hotels-list__item">
+                <p class="image-hotel">
+                  <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
                 </p>
-              </div>
-              <p class="found-hotels-list__rating">Рейтинг: 9,2</p>
-            </li>
-          </ul>
-        </section>
+                <div class="column-info-reserve">
+                  <a class="found-hotels-list__hotel-link" href="#">
+                    Villas at Poco Diablo
+                  </a>
+                  <div class="desc">
+                    <p class="found-hotels-list__text">Апартаменты</p>
+                    <p class="found-hotels-list__text">От 2000 р.</p>
+                  </div>
+                  <p class="column-reserve">
+                    <a class="button found-hotels-list__details-button" href="#">
+                      Подробнее
+                    </a>
+                    <a class="button found-hotels-list__reserve-button" href="#">
+                      Забронировать
+                    </a>
+                  </p>
+                </div>
+                <p class="found-hotels-list__rating">Рейтинг: 9,2</p>
+              </li>
+            </ul>
+          </section>
+        </div>
       </main>
 
-      <footer class="main-footer">
-        <div class="column">
+      <footer class="main-footer inner">
+        <div class="main-footer__column">
           <p class="main-footer__hashtag">#visitsedona</p>
         </div>
-        <div class="column">
+        <div class="main-footer__column">
           <ul class="main-footer__social-list">
             <li>
               <a class="button social-button social-twitter" href="#">
@@ -260,7 +272,7 @@
             </li>
           </ul>
         </div>
-        <div class="column">
+        <div class="main-footer__column">
           <p class="main-footer__copyright">
             <span class="main-footer__copyright-text" >Website by</span>
             <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
